--- a/MaterialDesignTest/MainWindow.xaml
+++ b/MaterialDesignTest/MainWindow.xaml
@@ -181,105 +181,106 @@
             
             <!-- Panneau milieu -->
             <ScrollViewer Grid.Column="1" HorizontalScrollBarVisibility="Visible">
-            <Grid>
-                <!-- Onglet de changement de couleur -->
-                <Grid Margin="15"  Visibility="Visible" x:Name="grid_changeColor">
-                    <StackPanel>
-                        <Canvas Height="100" Background="White" Margin="0 0 0 60">
-                            <Canvas.Effect>
-                                <DropShadowEffect ShadowDepth="1" Opacity="0.2" Direction="225"  />
-                            </Canvas.Effect>
-                        </Canvas>
-                        <!-- Controles rouges -->
-                        <Grid Margin="0 0 0 30">
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="46" />
-                                <ColumnDefinition />
-                            </Grid.ColumnDefinitions>
-                            <Canvas Background="Red">
+                <Grid>
+                    <!-- Onglet de changement de couleur -->
+                    <Grid Margin="15"  Visibility="Hidden" x:Name="grid_changeColor">
+                        <StackPanel>
+                            <Canvas Height="100" Background="White" Margin="0 0 0 60">
                                 <Canvas.Effect>
-                                    <DropShadowEffect ShadowDepth="1" Opacity="0.2" Direction="225" />
+                                    <DropShadowEffect ShadowDepth="1" Opacity="0.2" Direction="225"  />
                                 </Canvas.Effect>
                             </Canvas>
+                            <!-- Controles rouges -->
+                            <Grid Margin="0 0 0 30">
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="46" />
+                                    <ColumnDefinition />
+                                </Grid.ColumnDefinitions>
+                                <Canvas Background="Red">
+                                    <Canvas.Effect>
+                                        <DropShadowEffect ShadowDepth="1" Opacity="0.2" Direction="225" />
+                                    </Canvas.Effect>
+                                </Canvas>
 
-                            <StackPanel Grid.Column="1" Margin="16 0 0 0">
-                                <TextBlock Text="Rouge" Margin="0 0 0 16" />
-                                <Slider Minimum="0" Maximum="255" Value="255" />
-                            </StackPanel>
-                        </Grid>
-                        
-                        <!-- Controles bleus -->
-                        <Grid Margin="0 0 0 30">
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="46" />
-                                <ColumnDefinition />
-                            </Grid.ColumnDefinitions>
-                            <Canvas Background="Green">
-                                <Canvas.Effect>
-                                    <DropShadowEffect ShadowDepth="1" Opacity="0.2" Direction="225" />
-                                </Canvas.Effect>
-                            </Canvas>
+                                <StackPanel Grid.Column="1" Margin="16 0 0 0">
+                                    <TextBlock Text="Rouge" Margin="0 0 0 16" />
+                                    <Slider Minimum="0" Maximum="255" Value="255" />
+                                </StackPanel>
+                            </Grid>
 
-                            <StackPanel Grid.Column="1" Margin="16 0 0 0">
-                                <TextBlock Text="Vert" Margin="0 0 0 16" />
-                                <Slider Minimum="0" Maximum="255" Value="255" />
-                            </StackPanel>
-                        </Grid>
-                        
-                        <!-- Controles verts -->
-                        <Grid Margin="0 0 0 30">
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="46" />
-                                <ColumnDefinition />
-                            </Grid.ColumnDefinitions>
-                            <Canvas Background="Blue">
-                                <Canvas.Effect>
-                                    <DropShadowEffect ShadowDepth="1" Opacity="0.2" Direction="225" />
-                                </Canvas.Effect>
-                            </Canvas>
+                            <!-- Controles bleus -->
+                            <Grid Margin="0 0 0 30">
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="46" />
+                                    <ColumnDefinition />
+                                </Grid.ColumnDefinitions>
+                                <Canvas Background="Green">
+                                    <Canvas.Effect>
+                                        <DropShadowEffect ShadowDepth="1" Opacity="0.2" Direction="225" />
+                                    </Canvas.Effect>
+                                </Canvas>
 
-                            <StackPanel Grid.Column="1" Margin="16 0 0 0">
-                                <TextBlock Text="Bleu" Margin="0 0 0 16" />
-                                <Slider Minimum="0" Maximum="255" Value="255" />
-                            </StackPanel>
-                        </Grid>
-                    </StackPanel>
+                                <StackPanel Grid.Column="1" Margin="16 0 0 0">
+                                    <TextBlock Text="Vert" Margin="0 0 0 16" />
+                                    <Slider Minimum="0" Maximum="255" Value="255" />
+                                </StackPanel>
+                            </Grid>
+
+                            <!-- Controles verts -->
+                            <Grid Margin="0 0 0 30">
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="46" />
+                                    <ColumnDefinition />
+                                </Grid.ColumnDefinitions>
+                                <Canvas Background="Blue">
+                                    <Canvas.Effect>
+                                        <DropShadowEffect ShadowDepth="1" Opacity="0.2" Direction="225" />
+                                    </Canvas.Effect>
+                                </Canvas>
+
+                                <StackPanel Grid.Column="1" Margin="16 0 0 0">
+                                    <TextBlock Text="Bleu" Margin="0 0 0 16" />
+                                    <Slider Minimum="0" Maximum="255" Value="255" />
+                                </StackPanel>
+                            </Grid>
+                        </StackPanel>
+                    </Grid>
+
+                    <!-- Onglet de bienvenue -->
+                    <Grid Visibility="Visible" x:Name="grid_welcome" VerticalAlignment="Center" HorizontalAlignment="Center">
+                        <Menu>
+                            <Menu.ItemsPanel>
+                                <ItemsPanelTemplate>
+                                    <VirtualizingStackPanel Orientation="Vertical"/>
+                                </ItemsPanelTemplate>
+                            </Menu.ItemsPanel>
+                            <MenuItem Header="Nouvelle story board">
+
+                                <MenuItem.Icon>
+                                    <materialDesign:PackIcon Kind="File" />
+                                </MenuItem.Icon>
+                            </MenuItem>
+                            <MenuItem Header="Ouvrir story board">
+                                <MenuItem.Icon>
+                                    <materialDesign:PackIcon Kind="FileFind" />
+                                </MenuItem.Icon>
+                            </MenuItem>
+                            <MenuItem Header="Gérer couleur" Command="{Binding ColorMenu}" CommandParameter="{Binding}">
+                                <MenuItem.Icon>
+                                    <materialDesign:PackIcon Kind="Pencil" />
+                                </MenuItem.Icon>
+                            </MenuItem>
+                            <MenuItem Header="Configurer">
+                                <MenuItem.Icon>
+                                    <materialDesign:PackIcon Kind="Settings" />
+                                </MenuItem.Icon>
+                            </MenuItem>
+                        </Menu>
+                    </Grid>
                 </Grid>
-
-                <!-- Onglet de bienvenue -->
-                <Grid Visibility="Hidden" x:Name="grid_welcome" VerticalAlignment="Center" HorizontalAlignment="Center">
-                    <Menu>
-                        <Menu.ItemsPanel>
-                            <ItemsPanelTemplate>
-                                <VirtualizingStackPanel Orientation="Vertical"/>
-                            </ItemsPanelTemplate>
-                        </Menu.ItemsPanel>
-                        <MenuItem Header="Nouvelle story board">
-
-                            <MenuItem.Icon>
-                                <materialDesign:PackIcon Kind="File" />
-                            </MenuItem.Icon>
-                        </MenuItem>
-                        <MenuItem Header="Ouvrir story board">
-                            <MenuItem.Icon>
-                                <materialDesign:PackIcon Kind="FileFind" />
-                            </MenuItem.Icon>
-                        </MenuItem>
-                        <MenuItem Header="Gérer couleur" Command="{Binding ColorMenu}" CommandParameter="{Binding}">
-                            <MenuItem.Icon>
-                                <materialDesign:PackIcon Kind="Pencil" />
-                            </MenuItem.Icon>
-                        </MenuItem>
-                        <MenuItem Header="Configurer">
-                            <MenuItem.Icon>
-                                <materialDesign:PackIcon Kind="Settings" />
-                            </MenuItem.Icon>
-                        </MenuItem>
-                    </Menu>
-                </Grid>
-            </Grid>
-            <!-- Fin panneau milieu -->
             </ScrollViewer>
+            <!-- Fin panneau milieu -->
+            
             <!-- Panneau de droite -->
             <Grid Grid.Column="2" Background="#303030">
                 <Grid.Effect>
@@ -297,7 +298,16 @@
                         </Button>
                     </StackPanel>
                     <StackPanel Grid.Row="1" Margin="7">
-                        <TextBlock Text="Actions" FontSize="15" />
+                        <TextBlock Text="Balance" FontSize="15" />
+                        <TextBlock Text="Rouge" FontSize="9" Padding="0 16 0 8" Opacity=".8" />
+                        <TextBox Text="255" />
+                        <TextBlock Text="Vert" FontSize="9" Padding="0 16 0 8" Opacity=".8" />
+                        <TextBox Text="255" />
+                        <TextBlock Text="Bleu" FontSize="9" Padding="0 16 0 8" Opacity=".8" />
+                        <TextBox Text="255" />
+                        
+
+                        <TextBlock Text="Actions" Margin="0 32 0 0" FontSize="15" />
                         <Button Content="Envoyer" Margin="0 20 0 5" />
                         <Button Content="Supprimer" Margin="0 10 0 5" />
                         <Button Content="Sauvegarder" Margin="0 10 0 5" />
