--- a/MaterialDesignTest/MainWindow.xaml
+++ b/MaterialDesignTest/MainWindow.xaml
@@ -146,108 +146,124 @@
             </Grid.ColumnDefinitions>
 
             <!-- Panneau de gauche -->
-            <Grid Grid.Column="0" Background="#303030">
-                <Grid.Effect>
-                    <DropShadowEffect ShadowDepth="1" Opacity="0.5" Direction="315"  />
-                </Grid.Effect>
-                <Grid>
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="Auto" />
-                        <RowDefinition />
-                    </Grid.RowDefinitions>
+            <ScrollViewer Grid.Column="0" HorizontalScrollBarVisibility="Visible">
+                <Grid Background="#303030">
+                    <Grid.Effect>
+                        <DropShadowEffect ShadowDepth="1" Opacity="0.5" Direction="315"  />
+                    </Grid.Effect>
+                    <Grid>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto" />
+                            <RowDefinition />
+                        </Grid.RowDefinitions>
 
-                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
-                        <Button Background="{x:Null}" BorderBrush="{x:Null}" VerticalAlignment="Top" Command="{Binding HandleLeftPanel}" CommandParameter="{Binding}">
-                            <materialDesign:PackIcon Kind="Close"/>
-                        </Button>
-                    </StackPanel>
-                    <StackPanel Grid.Row="1" Margin="8">
-                        <TextBlock Text="Informations" FontSize="15" Margin="0 0 0 20" />
-                        <TextBlock Text="Type" FontSize="9" Padding="0 16 0 8" Opacity=".8" />
-                        <ComboBox>
-                            <ComboBoxItem IsSelected="True">
-                                Lyre
-                            </ComboBoxItem>
-                            <ComboBoxItem>
-                                Projecteur
-                            </ComboBoxItem>
-                        </ComboBox>
-                        <TextBlock Text="Adresse" FontSize="9" Padding="0 16 0 8" Opacity=".8" />
-                        <TextBox Text="21" />
-                    </StackPanel>
+                        <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
+                            <Button Background="{x:Null}" BorderBrush="{x:Null}" VerticalAlignment="Top" Command="{Binding HandleLeftPanel}" CommandParameter="{Binding}">
+                                <materialDesign:PackIcon Kind="Close"/>
+                            </Button>
+                        </StackPanel>
+                        <StackPanel Grid.Row="1" Margin="8">
+                            <TextBlock Text="Informations" FontSize="15" Margin="0 0 0 20" />
+                            <TextBlock Text="Type" FontSize="9" Padding="0 16 0 8" Opacity=".8" />
+                            <ComboBox>
+                                <ComboBoxItem IsSelected="True">
+                                    Lyre
+                                </ComboBoxItem>
+                                <ComboBoxItem>
+                                    Projecteur
+                                </ComboBoxItem>
+                            </ComboBox>
+                            <TextBlock Text="Adresse" FontSize="9" Padding="0 16 0 8" Opacity=".8" />
+                            <TextBox Text="21" />
+                        </StackPanel>
+                    </Grid>
                 </Grid>
-            </Grid>
+            </ScrollViewer>
             <!-- Fin Panneau de gauche -->
-            
+
             <!-- Panneau milieu -->
             <ScrollViewer Grid.Column="1" HorizontalScrollBarVisibility="Visible">
                 <Grid>
                     <!-- Onglet de changement de couleur -->
-                    <Grid Margin="15"  Visibility="Hidden" x:Name="grid_changeColor">
-                        <StackPanel>
-                            <Canvas Height="100" Background="White" Margin="0 0 0 60">
-                                <Canvas.Effect>
-                                    <DropShadowEffect ShadowDepth="1" Opacity="0.2" Direction="225"  />
-                                </Canvas.Effect>
-                            </Canvas>
-                            <!-- Controles rouges -->
-                            <Grid Margin="0 0 0 30">
-                                <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="46" />
-                                    <ColumnDefinition />
-                                </Grid.ColumnDefinitions>
-                                <Canvas Background="Red">
-                                    <Canvas.Effect>
-                                        <DropShadowEffect ShadowDepth="1" Opacity="0.2" Direction="225" />
-                                    </Canvas.Effect>
-                                </Canvas>
+                    <Grid Margin="15"  Visibility="Visible" x:Name="grid_changeColor">
+                        <Grid>
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="1*" />
+                                <RowDefinition Height="1*" />
+                                <RowDefinition Height="1*" />
+                                <RowDefinition Height="1*" />
+                            </Grid.RowDefinitions>
 
-                                <StackPanel Grid.Column="1" Margin="16 0 0 0">
-                                    <TextBlock Text="Rouge" Margin="0 0 0 16" />
-                                    <Slider Minimum="0" Maximum="255" Value="255" />
-                                </StackPanel>
+                            <Grid Background="White">
+                                <Grid.Effect>
+                                    <DropShadowEffect ShadowDepth="1" Opacity="0.2" Direction="225"  />
+                                </Grid.Effect>
+                            </Grid>
+                            <!-- Controles rouges -->
+                            <Grid Grid.Row="1" Margin="0 30 0 30">
+                                <Grid VerticalAlignment="Center">
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="46" />
+                                        <ColumnDefinition />
+                                    </Grid.ColumnDefinitions>
+                                    <Canvas Background="Red">
+                                        <Canvas.Effect>
+                                            <DropShadowEffect ShadowDepth="1" Opacity="0.2" Direction="225" />
+                                        </Canvas.Effect>
+                                    </Canvas>
+
+                                    <StackPanel Grid.Column="1" Margin="16 0 0 0">
+                                        <TextBlock Text="Rouge" Margin="0 0 0 16" />
+                                        <Slider Minimum="0" Maximum="255" Value="255" />
+                                    </StackPanel>
+                                </Grid>
                             </Grid>
 
                             <!-- Controles bleus -->
-                            <Grid Margin="0 0 0 30">
-                                <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="46" />
-                                    <ColumnDefinition />
-                                </Grid.ColumnDefinitions>
-                                <Canvas Background="Green">
-                                    <Canvas.Effect>
-                                        <DropShadowEffect ShadowDepth="1" Opacity="0.2" Direction="225" />
-                                    </Canvas.Effect>
-                                </Canvas>
 
-                                <StackPanel Grid.Column="1" Margin="16 0 0 0">
-                                    <TextBlock Text="Vert" Margin="0 0 0 16" />
-                                    <Slider Minimum="0" Maximum="255" Value="255" />
-                                </StackPanel>
+                            <Grid Grid.Row="2" Margin="0 0 0 30">
+                                <Grid VerticalAlignment="Center">
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="46" />
+                                        <ColumnDefinition />
+                                    </Grid.ColumnDefinitions>
+                                    <Canvas Background="Green">
+                                        <Canvas.Effect>
+                                            <DropShadowEffect ShadowDepth="1" Opacity="0.2" Direction="225" />
+                                        </Canvas.Effect>
+                                    </Canvas>
+
+                                    <StackPanel Grid.Column="1" Margin="16 0 0 0">
+                                        <TextBlock Text="Vert" Margin="0 0 0 16" />
+                                        <Slider Minimum="0" Maximum="255" Value="255" />
+                                    </StackPanel>
+                                </Grid>
                             </Grid>
 
                             <!-- Controles verts -->
-                            <Grid Margin="0 0 0 30">
-                                <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="46" />
-                                    <ColumnDefinition />
-                                </Grid.ColumnDefinitions>
-                                <Canvas Background="Blue">
-                                    <Canvas.Effect>
-                                        <DropShadowEffect ShadowDepth="1" Opacity="0.2" Direction="225" />
-                                    </Canvas.Effect>
-                                </Canvas>
+                            <Grid Grid.Row="3" Margin="0 0 0 30">
+                                <Grid VerticalAlignment="Center">
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="46" />
+                                        <ColumnDefinition />
+                                    </Grid.ColumnDefinitions>
+                                    <Canvas Background="Blue">
+                                        <Canvas.Effect>
+                                            <DropShadowEffect ShadowDepth="1" Opacity="0.2" Direction="225" />
+                                        </Canvas.Effect>
+                                    </Canvas>
 
-                                <StackPanel Grid.Column="1" Margin="16 0 0 0">
-                                    <TextBlock Text="Bleu" Margin="0 0 0 16" />
-                                    <Slider Minimum="0" Maximum="255" Value="255" />
-                                </StackPanel>
+                                    <StackPanel Grid.Column="1" Margin="16 0 0 0">
+                                        <TextBlock Text="Bleu" Margin="0 0 0 16" />
+                                        <Slider Minimum="0" Maximum="255" Value="255" />
+                                    </StackPanel>
+                                </Grid>
                             </Grid>
-                        </StackPanel>
+                        </Grid>
                     </Grid>
 
                     <!-- Onglet de bienvenue -->
-                    <Grid Visibility="Visible" x:Name="grid_welcome" VerticalAlignment="Center" HorizontalAlignment="Center">
+                    <Grid Visibility="Hidden" x:Name="grid_welcome" VerticalAlignment="Center" HorizontalAlignment="Center">
                         <Menu>
                             <Menu.ItemsPanel>
                                 <ItemsPanelTemplate>
@@ -280,44 +296,43 @@
                 </Grid>
             </ScrollViewer>
             <!-- Fin panneau milieu -->
-            
+
             <!-- Panneau de droite -->
-            <Grid Grid.Column="2" Background="#303030">
-                <Grid.Effect>
-                    <DropShadowEffect ShadowDepth="1" Opacity="0.5" Direction="225"  />
-                </Grid.Effect>
-                <Grid>
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="Auto" />
-                        <RowDefinition />
-                    </Grid.RowDefinitions>
+            <ScrollViewer Grid.Column="2" HorizontalScrollBarVisibility="Auto">
+                <Grid Background="#303030">
+                    <Grid.Effect>
+                        <DropShadowEffect ShadowDepth="1" Opacity="0.5" Direction="225"  />
+                    </Grid.Effect>
+                    <Grid>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto" />
+                            <RowDefinition />
+                        </Grid.RowDefinitions>
 
-                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Left">
-                        <Button Background="{x:Null}" BorderBrush="{x:Null}" VerticalAlignment="Top" Command="{Binding HandleRightPanel}" CommandParameter="{Binding}">
-                            <materialDesign:PackIcon Kind="Close"/>
-                        </Button>
-                    </StackPanel>
-                    <StackPanel Grid.Row="1" Margin="7">
-                        <TextBlock Text="Balance" FontSize="15" />
-                        <TextBlock Text="Rouge" FontSize="9" Padding="0 16 0 8" Opacity=".8" />
-                        <TextBox Text="255" />
-                        <TextBlock Text="Vert" FontSize="9" Padding="0 16 0 8" Opacity=".8" />
-                        <TextBox Text="255" />
-                        <TextBlock Text="Bleu" FontSize="9" Padding="0 16 0 8" Opacity=".8" />
-                        <TextBox Text="255" />
-                        
+                        <StackPanel Orientation="Horizontal" HorizontalAlignment="Left">
+                            <Button Background="{x:Null}" BorderBrush="{x:Null}" VerticalAlignment="Top" Command="{Binding HandleRightPanel}" CommandParameter="{Binding}">
+                                <materialDesign:PackIcon Kind="Close"/>
+                            </Button>
+                        </StackPanel>
+                        <StackPanel Grid.Row="1" Margin="7">
+                            <TextBlock Text="Balance" FontSize="15" />
+                            <TextBlock Text="Rouge" FontSize="9" Padding="0 16 0 8" Opacity=".8" />
+                            <TextBox Text="255" />
+                            <TextBlock Text="Vert" FontSize="9" Padding="0 16 0 8" Opacity=".8" />
+                            <TextBox Text="255" />
+                            <TextBlock Text="Bleu" FontSize="9" Padding="0 16 0 8" Opacity=".8" />
+                            <TextBox Text="255" />
 
-                        <TextBlock Text="Actions" Margin="0 32 0 0" FontSize="15" />
-                        <Button Content="Envoyer" Margin="0 20 0 5" />
-                        <Button Content="Supprimer" Margin="0 10 0 5" />
-                        <Button Content="Sauvegarder" Margin="0 10 0 5" />
-                    </StackPanel>
+
+                            <TextBlock Text="Actions" Margin="0 32 0 0" FontSize="15" />
+                            <Button Content="Envoyer" Margin="0 20 0 5" />
+                            <Button Content="Supprimer" Margin="0 10 0 5" />
+                            <Button Content="Sauvegarder" Margin="0 10 0 5" />
+                        </StackPanel>
+                    </Grid>
                 </Grid>
-            </Grid>
+            </ScrollViewer>
             <!-- Fin panneau de droite -->
         </Grid>
-        
-        
-
     </DockPanel>
 </Window>
